# open-p2p

./: .gitignore  LICENSE  README.md  pyproject.toml
config/policy_model/: 1200M.yaml  150M.yaml  300M.yaml  600M.yaml
config/rescale/: resize_192x192.yaml
elefant/config/: __init__.py  load_config.py  wandb.py
elefant/data/: __init__.py  action_label_video_proto_dataset.py  action_mapping.py  dummy_dataset.py  environment_mapping.py  rand_augment.py  video_proto_dataset.py  zmq_queue.py
elefant/data/proto/: shared_pb2.py  video_annotation_pb2.py  (+3 more)
elefant/ffmpeg/: __init__.py  encoder.py
elefant/im_tokenizer/: __init__.py  base_tokenizer.py  config.py  conv_tokenizer.py  factory.py  tokenizer.py
elefant/inference/: __init__.py  unix_socket_server.py
elefant/lightning/: __init__.py  async_checkpoint.py
elefant/metrics/: __init__.py  loss.py  rce.py
elefant/modules/: __init__.py  layer_norm.py  moe.py  rms_norm.py
elefant/policy_model/: action_decoder.py  config.py  inference.py  kv_cache.py  model_free.py  policy_transformer.py  pos_embed.py  stage3_finetune.py  train.py  transformer.py  utils.py  validation.py
elefant/text_tokenizer/: __init__.py  base_text_tokenizer.py  config.py  factory.py  text_tokenizer.py
elefant/torch/: __init__.py  test_gumbel.py  util.py
elefant_rust/: Cargo.toml  pyproject.toml  readme.md
elefant_rust/src/: ffmpeg_decoder.rs  lib.rs  resize.rs  shuffle_thread.rs  zmq_queue.rs  zmq_queue_py.rs
scripts/: download_checkpoints.py  download_data.py
toy-causality-example/: Simple_Causal_Behavior_Cloning.ipynb
(+7 files in other folders)
