[package]
name = "elefant_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "elefant_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
# locked version so that the resize function does not change
fast_image_resize = { version = "=5.1.4"}
ffmpeg = {package = "ffmpeg-next", git = "https://github.com/n1ght-hunter/rust-ffmpeg.git", rev = "c3876e09447f08f0aebb615ede24f61030b14b32"}
anyhow = "1.0.98"
zmq = "0.10.0"
rand = "0.8"
